# netrunner-tracker-app

./: .gitignore  NOTICE.md  README.md  RELEASE_NOTES.md  app.json  components.py  jest-setup.js  main.py  metro.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  theme.py  tracker.py  tsconfig.json  web_loading.html
.github/workflows/: build-aab.yml  build-apk.yml  ci.yml  deploy-web.yml
docs/superpowers/plans/: 2026-03-21-ux-overhaul.md  2026-04-04-icon-first-single-screen-redesign.md
docs/superpowers/specs/: 2026-03-21-ux-overhaul-design.md  2026-04-04-icon-first-single-screen-redesign.md
plugins/: withTrimmedAndroidPermissions.js
public/: privacy.html
scripts/: capture_readme_screens.py
src/: App.tsx  components.py  game_log.py  main.py  state.py  state.ts  theme.py  theme.ts  tracker.py
src/__tests__/: AgendaBar.test.tsx  StatChip.test.tsx  state.test.ts  useBatchedDelta.test.ts  useGameState.test.ts
src/assets/: AppIcon.icns
src/components/: AgendaBar.tsx  CenterLadder.tsx  ClickToken.tsx  CreditCounter.tsx  DiceMarkSheet.tsx  DieIcon.tsx  DigitText.tsx  FactionGlyph.tsx  Icon.tsx  IntroSplash.tsx  LogSheet.tsx  MarkChip.tsx  MiniLadder.tsx  OppChip.tsx  StatChip.tsx  WinOverlay.tsx  WinTargetSheet.tsx
src/hooks/: useBatchedDelta.ts  useGameState.ts
src/screens/: GameScreen.tsx  GameScreenLandscape.tsx  SetupScreen.tsx
