[project]
name = "netrunner-tracker"
version = "1.3.0"
description = "Game state tracker for Android: Netrunner"
requires-python = ">=3.11"
dependencies = ["flet"]

[tool.flet.app]
path = "src"
product = "Netrunner Tracker"
org = "com.salvob41"

[tool.flet.android]
adaptive_icon_background = "#07090d"
permissions = ["android.permission.WAKE_LOCK"]
